Added a link between notes and contacts.

--- a/TODO.org
+++ b/TODO.org
@@ -1,12 +1,22 @@
-* Добавить новый контакт вручную
-* Посмотреть все текущие шоткаты и команды
+* Добавить юнит-тесты
+* DONE Добавить новый контакт вручную
+- State "DONE"       from              [2017-08-04 Fri 09:14]
+* TODO Посмотреть все текущие шоткаты и команды
 * Найти контакты по тегу, например lisp или yandex.
-** протегать контакт
-** показывать теги на странице контакта
-** осуществлять поиск по тегу
-** показывать все найденные записи в виде списка, если их больше одной, или в виде карточки контакта
-** выбирать контакт из списка кликом по имени
-** выбирать контакт шоткатом
-** удаление тега
+** DONE протегать контакт
+- State "DONE"       from              [2017-08-04 Fri 09:14]
+** DONE показывать теги на странице контакта
+- State "DONE"       from              [2017-08-04 Fri 09:14]
+** DONE осуществлять поиск по тегу
+- State "DONE"       from              [2017-08-04 Fri 09:14]
+** DONE показывать все найденные записи в виде списка, если их больше одной, или в виде карточки контакта
+- State "DONE"       from              [2017-08-04 Fri 09:14]
+** DONE выбирать контакт из списка кликом по имени
+- State "DONE"       from              [2017-08-04 Fri 09:14]
+** TODO выбирать контакт шоткатом
+** DONE удаление тега
+- State "DONE"       from              [2017-08-04 Fri 09:14]
 * Посмотреть все дни рождения в виде календаря или списка.
+* Автоматически заводить контакт из авторов письма
+* Емейлы должны попадать в ленту активности.
 * Новые ответы из твиттера или емейлы должны попадать в ленту активности.
