--- a/TODO.org
+++ b/TODO.org
@@ -1,8 +1,15 @@
-* Добавить юнит-тесты
+* Заметки
+** TODO Сделать чтобы элементы фида отображались как отдельные виджеты
+** TODO Сделать так, чтобы заметки разделялись и содержали дату
+** TODO Сделать так, чтобы заметки при рендеринге испольвали маркдаун и автоматически превращали гиперссылки в HTML
+** TODO Сделать удание заметок
+** TODO Сделать редактирование заметок
+* Технические таски
+** TODO Добавить юнит-тесты
 * DONE Добавить новый контакт вручную
 - State "DONE"       from              [2017-08-04 Fri 09:14]
 * TODO Посмотреть все текущие шоткаты и команды
-* Найти контакты по тегу, например lisp или yandex.
+* TODO Найти контакты по тегу, например lisp или yandex.
 ** DONE протегать контакт
 - State "DONE"       from              [2017-08-04 Fri 09:14]
 ** DONE показывать теги на странице контакта
@@ -16,7 +23,13 @@
 ** TODO выбирать контакт шоткатом
 ** DONE удаление тега
 - State "DONE"       from              [2017-08-04 Fri 09:14]
-* Посмотреть все дни рождения в виде календаря или списка.
-* Автоматически заводить контакт из авторов письма
-* Емейлы должны попадать в ленту активности.
-* Новые ответы из твиттера или емейлы должны попадать в ленту активности.
+* TODO Посмотреть все дни рождения в виде календаря или списка.
+* Обработка почты
+** TODO Емейлы должны попадать в ленту активности и связываться со всеми участниками переписки.
+** TODO Автоматически заводить контакт из авторов письма
+* Обработка твиттера
+** TODO Новые ответы из твиттера должны попадать в ленту активности
+Но только в том случае, если я написал контакту, пометил его твит
+"любимым" или он ответил мне.
+** TODO У некоторых контактов должна быть возможность настроить так, чтобы все его твиты попадали в фид
+Например Бобука
