Now activity feed constructed from widgets. Also, markdown rendering is applied to notes' text.

--- a/TODO.org
+++ b/TODO.org
@@ -1,8 +1,15 @@
 * Заметки
-** TODO Сделать чтобы элементы фида отображались как отдельные виджеты
-** TODO Сделать так, чтобы заметки разделялись и содержали дату
-** TODO Сделать так, чтобы заметки при рендеринге испольвали маркдаун и автоматически превращали гиперссылки в HTML
-** TODO Сделать удание заметок
+** DONE Сделать чтобы элементы фида отображались как отдельные виджеты
+- State "DONE"       from "TODO"       [2017-08-07 Mon 20:23]
+** DONE Сделать так, чтобы заметки разделялись и содержали дату
+- State "DONE"       from "TODO"       [2017-08-07 Mon 20:23]
+** DONE Сделать так, чтобы заметки при рендеринге испольвали маркдаун и автоматически превращали гиперссылки в HTML
+- State "DONE"       from "TODO"       [2017-08-09 Wed 10:34]
+
+** TODO Сделать так, чтобы фид обновлялся при добавлении новой заметки
+Сейчас список виджетов в фиде стал статичен и нужно обновлять его по событию.
+
+** TODO Сделать удаление заметок
 ** TODO Сделать редактирование заметок
 * Технические таски
 ** TODO Добавить юнит-тесты
