Added feed-item-created hook. Work is based on recent Reblocks where hooks were redesigned.

--- a/TODO.org
+++ b/TODO.org
@@ -6,9 +6,12 @@
 ** DONE Сделать так, чтобы заметки при рендеринге испольвали маркдаун и автоматически превращали гиперссылки в HTML
 - State "DONE"       from "TODO"       [2017-08-09 Wed 10:34]
 
-** TODO Сделать так, чтобы фид обновлялся при добавлении новой заметки
+** DONE Сделать так, чтобы фид обновлялся при добавлении новой заметки
+- State "DONE"       from "TODO"       [2017-08-11 Fri 20:32]
 Сейчас список виджетов в фиде стал статичен и нужно обновлять его по событию.
 
+** DONE Сортировать фид по убыванию даты
+- State "DONE"       from "TODO"       [2017-08-13 Sun 22:05]
 ** TODO Сделать удаление заметок
 ** TODO Сделать редактирование заметок
 * Технические таски
