Added a new TODO items.

--- a/TODO.org
+++ b/TODO.org
@@ -13,7 +13,8 @@
 ** DONE Сортировать фид по убыванию даты
 - State "DONE"       from "TODO"       [2017-08-13 Sun 22:05]
 ** TODO Сделать удаление заметок
-** TODO Сделать редактирование заметок
+** TODO Сделать inplace редактирование заметок
+** TODO Сделать режим многострочного создания заметки.
 * Технические таски
 ** TODO Добавить юнит-тесты
 * DONE Добавить новый контакт вручную
@@ -33,7 +34,10 @@
 ** TODO выбирать контакт шоткатом
 ** DONE удаление тега
 - State "DONE"       from              [2017-08-04 Fri 09:14]
-* TODO Посмотреть все дни рождения в виде календаря или списка.
+* Дни рождения
+** TODO Добавить день рождения
+** TODO Изменить день рождения
+** TODO Посмотреть все дни рождения в виде календаря или списка.
 * Обработка почты
 ** TODO Емейлы должны попадать в ленту активности и связываться со всеми участниками переписки.
 ** TODO Автоматически заводить контакт из авторов письма
