Added a plugin to keep information about birthdays.

--- a/TODO.org
+++ b/TODO.org
@@ -34,9 +34,15 @@
 ** TODO выбирать контакт шоткатом
 ** DONE удаление тега
 - State "DONE"       from              [2017-08-04 Fri 09:14]
+
+
 * Дни рождения
-** TODO Добавить день рождения
-** TODO Изменить день рождения
+** DONE Добавить день рождения
+- State "DONE"       from "TODO"       [2017-08-16 Wed 09:25]
+** DONE Изменить день рождения
+- State "DONE"       from "TODO"       [2017-08-16 Wed 09:26]
+** TODO Надо решить проблему обновления виджета после добавления или изменения дня рождения
+** TODO Решить проблему пропадающих тегов
 ** TODO Посмотреть все дни рождения в виде календаря или списка.
 * Обработка почты
 ** TODO Емейлы должны попадать в ленту активности и связываться со всеми участниками переписки.
@@ -47,3 +53,11 @@
 "любимым" или он ответил мне.
 ** TODO У некоторых контактов должна быть возможность настроить так, чтобы все его твиты попадали в фид
 Например Бобука
+* Контакты
+** TODO Поиск по имени должен учитывать синонимы
+Например Саша, Александр должны находиться по запросу Саш
+* Удобство командной строки
+** TODO Добавить выбор предыдущих команд, когда жмёшь стрелку "вверх"
+** TODO Добавить completion
+** TODO Поиск по истории при Ctrl-R
+** TODO Динамический плейсхолдер с подсказками, изменяющийся в зависимости от текущего состояния
