Added help "command" which shows a list of available commands along with their descriptions.

--- a/TODO.org
+++ b/TODO.org
@@ -57,6 +57,8 @@
 ** TODO Поиск по имени должен учитывать синонимы
 Например Саша, Александр должны находиться по запросу Саш
 * Удобство командной строки
+** DONE Добавить команду help, которая бы показывала информацию по доступным командам
+- State "DONE"       from "TODO"       [2017-08-16 Wed 22:56]
 ** TODO Добавить выбор предыдущих команд, когда жмёшь стрелку "вверх"
 ** TODO Добавить completion
 ** TODO Поиск по истории при Ctrl-R
