Cleanup few things.

--- a/TODO.org
+++ b/TODO.org
@@ -19,7 +19,6 @@
 ** TODO Добавить юнит-тесты
 * DONE Добавить новый контакт вручную
 - State "DONE"       from              [2017-08-04 Fri 09:14]
-* TODO Посмотреть все текущие шоткаты и команды
 * TODO Найти контакты по тегу, например lisp или yandex.
 ** DONE протегать контакт
 - State "DONE"       from              [2017-08-04 Fri 09:14]
@@ -47,13 +46,16 @@
 * Обработка почты
 ** TODO Емейлы должны попадать в ленту активности и связываться со всеми участниками переписки.
 ** TODO Автоматически заводить контакт из авторов письма
-* Обработка твиттера
+* Твиттер
 ** TODO Новые ответы из твиттера должны попадать в ленту активности
 Но только в том случае, если я написал контакту, пометил его твит
 "любимым" или он ответил мне.
 ** TODO У некоторых контактов должна быть возможность настроить так, чтобы все его твиты попадали в фид
 Например Бобука
+* Email
 * Контакты
+** TODO Добавить базовые типы контактов
+email, телефон
 ** TODO Поиск по имени должен учитывать синонимы
 Например Саша, Александр должны находиться по запросу Саш
 * Удобство командной строки
@@ -63,3 +65,6 @@
 ** TODO Добавить completion
 ** TODO Поиск по истории при Ctrl-R
 ** TODO Динамический плейсхолдер с подсказками, изменяющийся в зависимости от текущего состояния
+* Интерфейс
+** TODO Сделать красную перду для сообщения об ошибках
+** TODO Добавить историю виджетов, чтобы можно было переключаться на предыдущий виджет
