Two new plugins `email` and `phone` were added. Only for contain operations to fact manipulation.

--- a/TODO.org
+++ b/TODO.org
@@ -55,7 +55,10 @@
 * Email
 * Контакты
 ** TODO Добавить базовые типы контактов
-email, телефон
+*** DONE email
+- State "DONE"       from "TODO"       [2017-08-18 Fri 09:17]
+*** DONE телефон
+- State "DONE"       from "TODO"       [2017-08-18 Fri 09:27]
 ** TODO Поиск по имени должен учитывать синонимы
 Например Саша, Александр должны находиться по запросу Саш
 * Удобство командной строки
