Tags now are sorted and each is started with #.

--- a/TODO.org
+++ b/TODO.org
@@ -68,6 +68,10 @@
 ** TODO Добавить completion
 ** TODO Поиск по истории при Ctrl-R
 ** TODO Динамический плейсхолдер с подсказками, изменяющийся в зависимости от текущего состояния
+* Теги
+** DONE Сортировать теги в списке
+- State "DONE"       from "TODO"       [2017-08-18 Fri 20:47]
+** TODO При добавлении первого тега он не появляется в карточке контакта
 * Интерфейс
 ** TODO Сделать красную перду для сообщения об ошибках
 ** TODO Добавить историю виджетов, чтобы можно было переключаться на предыдущий виджет
