Added styling and ordering for fact groups.

--- a/TODO.org
+++ b/TODO.org
@@ -75,3 +75,6 @@
 * Интерфейс
 ** TODO Сделать красную перду для сообщения об ошибках
 ** TODO Добавить историю виджетов, чтобы можно было переключаться на предыдущий виджет
+** DONE Как-то выбирать порядок в котором идут группы фактов в карточке человека
+- State "DONE"       from "TODO"       [2017-08-18 Fri 21:13]
+** TODO Как-то выбирать какие факты показывать в списке контактов а какие нет
