Now only tags are shown in the list mode.

--- a/TODO.org
+++ b/TODO.org
@@ -16,6 +16,7 @@
 ** TODO Сделать inplace редактирование заметок
 ** TODO Сделать режим многострочного создания заметки.
 * Технические таски
+** TODO Починить открытие контакта из списка контактов путём клика на имени
 ** TODO Добавить юнит-тесты
 * DONE Добавить новый контакт вручную
 - State "DONE"       from              [2017-08-04 Fri 09:14]
@@ -77,4 +78,5 @@
 ** TODO Добавить историю виджетов, чтобы можно было переключаться на предыдущий виджет
 ** DONE Как-то выбирать порядок в котором идут группы фактов в карточке человека
 - State "DONE"       from "TODO"       [2017-08-18 Fri 21:13]
-** TODO Как-то выбирать какие факты показывать в списке контактов а какие нет
+** DONE Как-то выбирать какие факты показывать в списке контактов а какие нет
+- State "DONE"       from "TODO"       [2017-08-18 Fri 21:24]
