Hooks were rewritten using call-hooks. Contact selection on the search results list was fixed.

--- a/TODO.org
+++ b/TODO.org
@@ -72,7 +72,8 @@
 * Теги
 ** DONE Сортировать теги в списке
 - State "DONE"       from "TODO"       [2017-08-18 Fri 20:47]
-** TODO При добавлении первого тега он не появляется в карточке контакта
+** DONE При добавлении первого тега он не появляется в карточке контакта
+- State "DONE"       from "TODO"       [2017-09-08 Fri 21:14]
 * Интерфейс
 ** TODO Сделать красную перду для сообщения об ошибках
 ** TODO Добавить историю виджетов, чтобы можно было переключаться на предыдущий виджет
