Search by name can use synonyms, but they are hardcoded for now.

--- a/TODO.org
+++ b/TODO.org
@@ -55,12 +55,14 @@
 Например Бобука
 * Email
 * Контакты
-** TODO Добавить базовые типы контактов
+** DONE Добавить базовые типы контактов
+- State "DONE"       from "TODO"       [2017-09-25 Mon 08:46]
 *** DONE email
 - State "DONE"       from "TODO"       [2017-08-18 Fri 09:17]
 *** DONE телефон
 - State "DONE"       from "TODO"       [2017-08-18 Fri 09:27]
-** TODO Поиск по имени должен учитывать синонимы
+** DONE Поиск по имени должен учитывать синонимы
+- State "DONE"       from "TODO"       [2017-09-25 Mon 08:45]
 Например Саша, Александр должны находиться по запросу Саш
 * Удобство командной строки
 ** DONE Добавить команду help, которая бы показывала информацию по доступным командам
