Now contacts can be selected with Alt-1, Alt-2, etc.

--- a/TODO.org
+++ b/TODO.org
@@ -31,7 +31,8 @@
 - State "DONE"       from              [2017-08-04 Fri 09:14]
 ** DONE выбирать контакт из списка кликом по имени
 - State "DONE"       from              [2017-08-04 Fri 09:14]
-** TODO выбирать контакт шоткатом
+** DONE выбирать контакт шоткатом
+- State "DONE"       from "TODO"       [2017-09-25 Mon 21:05]
 ** DONE удаление тега
 - State "DONE"       from              [2017-08-04 Fri 09:14]
 
