Working email fetching.

--- a/TODO.org
+++ b/TODO.org
@@ -20,7 +20,8 @@
 ** TODO Добавить юнит-тесты
 * DONE Добавить новый контакт вручную
 - State "DONE"       from              [2017-08-04 Fri 09:14]
-* TODO Найти контакты по тегу, например lisp или yandex.
+* DONE Найти контакты по тегу, например lisp или yandex.
+- State "DONE"       from "TODO"       [2017-09-26 Tue 08:41]
 ** DONE протегать контакт
 - State "DONE"       from              [2017-08-04 Fri 09:14]
 ** DONE показывать теги на странице контакта
@@ -45,9 +46,6 @@
 ** TODO Надо решить проблему обновления виджета после добавления или изменения дня рождения
 ** TODO Решить проблему пропадающих тегов
 ** TODO Посмотреть все дни рождения в виде календаря или списка.
-* Обработка почты
-** TODO Емейлы должны попадать в ленту активности и связываться со всеми участниками переписки.
-** TODO Автоматически заводить контакт из авторов письма
 * Твиттер
 ** TODO Новые ответы из твиттера должны попадать в ленту активности
 Но только в том случае, если я написал контакту, пометил его твит
@@ -55,6 +53,26 @@
 ** TODO У некоторых контактов должна быть возможность настроить так, чтобы все его твиты попадали в фид
 Например Бобука
 * Email
+** TODO Емейлы должны попадать в ленту активности и связываться со всеми участниками переписки.
+** TODO Автоматически заводить контакт из авторов письма
+** Заметки
+*** Попробовал mel-base, но есть проблемы
+**** Нет поддержки таймаутов, если сеть пропадает, то получение емейлов зависает с таким трейсом
+#+BEGIN_SRC text
+
+Backtrace:
+  0: (CCL::FD-INPUT-AVAILABLE-P 18 -1)
+  1: (CCL:PROCESS-INPUT-WAIT 18 NIL)
+  2: (CL+SSL::INPUT-WAIT #<SSL-STREAM for #<BASIC-TCP-STREAM ISO-8859-1 (SOCKET/18) #x3020062DF40D>> 18 NIL)
+  3: (CL+SSL:MAKE-SSL-CLIENT-STREAM 18 :CERTIFICATE NIL :KEY NIL :PASSWORD NIL :METHOD CL+SSL::SSL-V23-METHOD :EXTERNAL-FORMAT :ISO-8859-1 :CLOSE-CALLBACK NIL :UNWRAP-STREAM-P T :CIPHER-LIST "ALL" :VERIFY ..
+  4: (MEL.NETWORK::MAKE-SSL-CONNECTION #<BASIC-TCP-STREAM ISO-8859-1 (SOCKET/18) #x3020062DF40D>)
+  5: (MEL.NETWORK::MAYBE-SSL-CONNECTION NIL NIL 993 #<BASIC-TCP-STREAM ISO-8859-1 (SOCKET/18) #x3020062DF40D>)
+  6: (MEL.NETWORK:MAKE-CONNECTION :REMOTE-HOST "imap.yandex.ru" :REMOTE-PORT 993 :ELEMENT-TYPE (UNSIGNED-BYTE 8) :SSL NIL)
+
+
+#+END_SRC
+*** Нашёл такое расширение mel-base, для чтения multipart
+https://github.com/gibsonf1/com.streamfocus.mel.mime
 * Контакты
 ** DONE Добавить базовые типы контактов
 - State "DONE"       from "TODO"       [2017-09-25 Mon 08:46]
@@ -72,11 +90,15 @@
 ** TODO Добавить completion
 ** TODO Поиск по истории при Ctrl-R
 ** TODO Динамический плейсхолдер с подсказками, изменяющийся в зависимости от текущего состояния
-* Теги
+* TODO Теги
+- State "DONE"       from              [2017-09-26 Tue 08:42]
 ** DONE Сортировать теги в списке
 - State "DONE"       from "TODO"       [2017-08-18 Fri 20:47]
 ** DONE При добавлении первого тега он не появляется в карточке контакта
 - State "DONE"       from "TODO"       [2017-09-08 Fri 21:14]
+** TODO Сделать страницу со списком тегов и именами
+Можно попробовать сортировать теги по дате последнего использования
+и контакты внутри по дате последней активности
 * Интерфейс
 ** TODO Сделать красную перду для сообщения об ошибках
 ** TODO Добавить историю виджетов, чтобы можно было переключаться на предыдущий виджет
