--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,5 @@
 * Заметки
+** TODO Надо перенести все models.notes (root object :notes) в plugins.notes (root-object :feed-items)
 ** DONE Сделать чтобы элементы фида отображались как отдельные виджеты
 - State "DONE"       from "TODO"       [2017-08-07 Mon 20:23]
 ** DONE Сделать так, чтобы заметки разделялись и содержали дату
