Symbol *hacrm-store* was renamed to *store*.

--- a/TODO.org
+++ b/TODO.org
@@ -17,6 +17,7 @@
 ** TODO Сделать inplace редактирование заметок
 ** TODO Сделать режим многострочного создания заметки.
 * Технические таски
+** TODO Убрать relations, заменив их прямыми связями между объектами
 ** TODO Починить открытие контакта из списка контактов путём клика на имени
 ** TODO Добавить юнит-тесты
 * DONE Добавить новый контакт вручную
