Tagging was moved to normal transactions.

--- a/TODO.org
+++ b/TODO.org
@@ -17,9 +17,16 @@
 ** TODO Сделать inplace редактирование заметок
 ** TODO Сделать режим многострочного создания заметки.
 * Технические таски
-** TODO Убрать relations, заменив их прямыми связями между объектами
-** TODO Починить открытие контакта из списка контактов путём клика на имени
-** TODO Добавить юнит-тесты
+** DONE Убрать relations, заменив их прямыми связями между объектами
+- State "DONE"       from "TODO"       [2017-10-24 Tue 00:34]
+** DONE Починить открытие контакта из списка контактов путём клика на имени
+- State "DONE"       from "TODO"       [2017-10-24 Tue 00:34]
+** DONE Добавить юнит-тесты
+- State "DONE"       from "TODO"       [2017-10-24 Tue 00:34]
+** DONE Починить untag и добавить на это тесты
+- State "DONE"       from "TODO"       [2017-10-25 Wed 16:31]
+** TODO Починить добавление телефона, проверить как сохраняются емейлы
+** TODO Сделать авто-снапшот раз в какое-то время.
 * DONE Добавить новый контакт вручную
 - State "DONE"       from              [2017-08-04 Fri 09:14]
 * DONE Найти контакты по тегу, например lisp или yandex.
