Untagging was fixed.

--- a/TODO.org
+++ b/TODO.org
@@ -25,7 +25,8 @@
 - State "DONE"       from "TODO"       [2017-10-24 Tue 00:34]
 ** DONE Починить untag и добавить на это тесты
 - State "DONE"       from "TODO"       [2017-10-25 Wed 16:31]
-** TODO Починить добавление телефона, проверить как сохраняются емейлы
+** DONE Починить добавление телефона, проверить как сохраняются емейлы
+- State "DONE"       from "TODO"       [2017-10-25 Wed 23:41]
 ** TODO Сделать авто-снапшот раз в какое-то время.
 * DONE Добавить новый контакт вручную
 - State "DONE"       from              [2017-08-04 Fri 09:14]
