Added a plan for MVP.

--- a/TODO.org
+++ b/TODO.org
@@ -1,3 +1,9 @@
+* Что нужно сделать до MVP
+** Доделать работу с емейлами (подтягивание по imap и ответы)
+*** Сделать крутую систему конфигурации плагинов, чтобы можно было сохранять настройки разных аккаунтов
+** Сделать сборку Electron приложения под OSX, чтобы можно было легко установить и пользоваться
+** Удаление контактов
+** Главную ленту, на которой будут видны действия по всем контактам
 * Заметки
 ** TODO Надо перенести все models.notes (root object :notes) в plugins.notes (root-object :feed-items)
 ** DONE Сделать чтобы элементы фида отображались как отдельные виджеты
