--- a/TODO.org
+++ b/TODO.org
@@ -4,8 +4,13 @@
 ** Сделать сборку Electron приложения под OSX, чтобы можно было легко установить и пользоваться
 ** Удаление контактов
 ** Главную ленту, на которой будут видны действия по всем контактам
+** Автокомплит команд иначе не круто
+** Историю чтобы можно было переключиться на предыдущий экран, если сделал что-то не то
+** Отображение сообщений об ошибке если что-то пошло не так (например невозможно добавить дату не в том формате)
+** Встроить метрику
 * Заметки
-** TODO Надо перенести все models.notes (root object :notes) в plugins.notes (root-object :feed-items)
+** DONE Надо перенести все models.notes (root object :notes) в plugins.notes (root-object :feed-items)
+- State "DONE"       from "TODO"       [2017-10-29 Sun 10:21]
 ** DONE Сделать чтобы элементы фида отображались как отдельные виджеты
 - State "DONE"       from "TODO"       [2017-08-07 Mon 20:23]
 ** DONE Сделать так, чтобы заметки разделялись и содержали дату
