Creating email fact now call hooks :fact-created and :fact-removed.

--- a/TODO.org
+++ b/TODO.org
@@ -1,13 +1,13 @@
 * Что нужно сделать до MVP
-** Доделать работу с емейлами (подтягивание по imap и ответы)
-*** Сделать крутую систему конфигурации плагинов, чтобы можно было сохранять настройки разных аккаунтов
-** Сделать сборку Electron приложения под OSX, чтобы можно было легко установить и пользоваться
-** Удаление контактов
-** Главную ленту, на которой будут видны действия по всем контактам
-** Автокомплит команд иначе не круто
-** Историю чтобы можно было переключиться на предыдущий экран, если сделал что-то не то
-** Отображение сообщений об ошибке если что-то пошло не так (например невозможно добавить дату не в том формате)
-** Встроить метрику
+** Доделать работу с емейлами (подтягивание по imap и ответы)       :medium:
+*** Сделать крутую систему конфигурации плагинов, чтобы можно было сохранять настройки разных аккаунтов :hard:
+** Сделать сборку Electron приложения под OSX, чтобы можно было легко установить и пользоваться :hard:
+** Главную ленту, на которой будут видны действия по всем контактам   :easy:
+** Автокомплит команд иначе не круто                                :medium:
+** Историю чтобы можно было переключиться на предыдущий экран, если сделал что-то не то :hard:
+** Отображение сообщений об ошибке если что-то пошло не так (например невозможно добавить дату не в том формате) :medium:
+** Удаление контактов                                                 :easy:
+** Встроить метрику                                                   :easy:
 * Заметки
 ** DONE Надо перенести все models.notes (root object :notes) в plugins.notes (root-object :feed-items)
 - State "DONE"       from "TODO"       [2017-10-29 Sun 10:21]
