All plugins were transformed into a separate systems to be detached from the main codebase.

--- a/TODO.org
+++ b/TODO.org
@@ -28,6 +28,8 @@
 ** TODO Сделать inplace редактирование заметок
 ** TODO Сделать режим многострочного создания заметки.
 * Технические таски
+** TODO Избавиться от отдельного списка фактов и заметок, хранить их просто в контактах
+** TODO Добавить страницу, которая будет обрабатывать no-command-error
 ** DONE Убрать relations, заменив их прямыми связями между объектами
 - State "DONE"       from "TODO"       [2017-10-24 Tue 00:34]
 ** DONE Починить открытие контакта из списка контактов путём клика на имени
