--- a/TIME.org
+++ b/TIME.org
@@ -3,5 +3,7 @@ I didn't tracked it before [2018-02-10 Sat].
 
 * Refactoring
 
+** [2018-02-14 Wed 09:42] All plugins were transformed into a separate systems to be detached from the main codebase.
+** [2018-02-13 Tue 20:13] 3h Fixing issues caused by package inferred migration.
 ** [2018-02-11 Sun 13:42] 3h Refactoring tests to use Rove and package inferred system
 ** [2018-02-10 Sat 13:07] 1h30m Finding why some of tags lost their contacts in the contact field and writing an export to JSON.
