Fixed phones plugin.

--- a/TODO.org
+++ b/TODO.org
@@ -28,7 +28,7 @@
 ** TODO Сделать inplace редактирование заметок
 ** TODO Сделать режим многострочного создания заметки.
 * Технические таски
-** TODO Обновлять список фактов когда добавился birthday
+** TODO Обновлять список фактов когда добавился birthday или phone
 ** TODO Сделать так, чтобы нельзя было дублирующиеся теги создавать
 ** TODO Избавиться от отдельного списка фактов и заметок, хранить их просто в контактах
 ** TODO Добавить страницу, которая будет обрабатывать no-command-error
