--- a/TIME.org
+++ b/TIME.org
@@ -8,3 +8,7 @@ I didn't tracked it before [2018-02-10 Sat].
 ** [2018-02-13 Tue 20:13] 3h Fixing issues caused by package inferred migration.
 ** [2018-02-11 Sun 13:42] 3h Refactoring tests to use Rove and package inferred system
 ** [2018-02-10 Sat 13:07] 1h30m Finding why some of tags lost their contacts in the contact field and writing an export to JSON.
+
+* Functionality
+
+** [2018-02-20 Tue 18:32] 2h Import from json.
